# In-Silico-BBB

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  ANALYSIS_REPORT.md  CHANGELOG.md  LICENSE  README.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
404/: index.html
api/model/: index.html
api/plots/: index.html
api/simulator/: index.html
api/substances/: index.html
assets/: theme.css
bbb/: __init__.py
bbb/core/: __init__.py  model.py  simulator.py
bbb/data/: __init__.py  substances.py
bbb/visualization/: __init__.py  plots.py
dev/changelog/: index.html
dev/contributing/: index.html
docs/: 404.md  index.md
docs/api/: model.md  plots.md  simulator.md  substances.md
docs/dev/: contributing.md
docs/guide/: charts.md  parameters.md  quickstart.md
guide/charts/: index.html
guide/parameters/: index.html
guide/quickstart/: index.html
scripts/: screenshot.py
search/: search_index.json
tests/: test_simulator.py
