[project]
name = "in-silico-bbb"
version = "0.2.0"
description = "Mechanistic two-compartment simulator of blood-brain barrier drug transport"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov",
    "pre-commit",
    "mypy",
    "ruff",
    "playwright",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
